examples/type_system/failing/133_if_branch_value_span_precision.flx
fn main() -> Unit {
    let _x = if true { 42 } else { "nope" }
}
